--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ before_install:
   - docker build -t liuchialin/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run liuchialin/react-test npm test -- --coverage
+  # - docker run liuchialin/react-test npm test -- --coverage
+  - docker run -e CI=true liuchialin/react-test npm test
 
 after_success:
   - docker build -t liuchialin/multi-client ./client
